// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.api.v0;

import "com/digitalasset/canton/protocol/v0/sequencing.proto";

service SequencerConnectService {

  rpc Handshake(com.digitalasset.canton.protocol.v0.Handshake.Request) returns (com.digitalasset.canton.protocol.v0.Handshake.Response);
  rpc GetDomainId (SequencerConnect.GetDomainId.Request) returns (SequencerConnect.GetDomainId.Response);
  rpc GetDomainParameters (SequencerConnect.GetDomainParameters.Request) returns (SequencerConnect.GetDomainParameters.Response);
  rpc VerifyActive (SequencerConnect.VerifyActive.Request) returns (SequencerConnect.VerifyActive.Response);

}

message SequencerConnect {
  message GetDomainId {
    message Request { }

    message Response {
      string domain_id = 1;
    }
  }

  message GetDomainParameters {
    message Request { }

    message Response {
      com.digitalasset.canton.protocol.v0.StaticDomainParameters parameters = 1;
    }
  }

  message VerifyActive {
    message Request { }

    message Response {
      oneof value {
        Success success = 1;
        Failure failure = 2;
      }
    }

    message Success {
      bool is_active = 1;
    }

    message Failure {
      string reason = 1;
    }
  }
}
